# haska

./: haska.cabal  stack.yaml
exe/: Main.hs
scripts/: populate-topics.sh
src/: Config.hs  Consumer.hs  KafkaTypes.hs  Parser.hs
